[package]
name = "nuline"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
futures-async-stream = "0.1.0-alpha.6"

[dependencies.async-std]
version = "0.99"
features = ["unstable"]